<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.MainFragment">

    <!-- TODO: Update blank fragment layout -->
    <!--Plant 제목 색깔 바꾸기 & 글자 높이 변경-->
    <!--로그인버튼-->
    <!--회원가입버튼-->

    <TextView
        android:id="@+id/appNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:bufferType="spannable"
        android:fontFamily="@font/notosans_medium"
        android:gravity="center"
        android:lineSpacingMultiplier="0.7"
        android:text="@string/main_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="72sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.307" />

    <android.widget.Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_green"
        android:fontFamily="@font/notosans_medium"
        android:gravity="center"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appNameText"
        app:layout_constraintVertical_bias="0.15" />

    <android.widget.Button
        android:id="@+id/signButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_white"
        android:fontFamily="@font/notosans_medium"
        android:gravity="center"
        android:text="@string/sign"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        app:layout_constraintVertical_bias="0.15" />


    <!-- <Button
         android:id="@+id/button2"
         android:layout_width="250dp"
         android:layout_height="50dp"
         android:backgroundTint="@color/white"
         android:fontFamily="@font/notosans_medium"
         android:gravity="center"
         android:text="@string/app_name"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
         app:layout_constraintVertical_bias="0.451" />-->

</androidx.constraintlayout.widget.ConstraintLayout>