<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/menu_bottom_navigation"
        android:layout_width="409dp"
        android:layout_height="45dp"
        android:layout_gravity="bottom"
        android:background="#FFFFFF"
        app:itemIconTint="@drawable/menu_item_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:menu="@menu/menu" />

    <ImageView
        android:id="@+id/flowerImage"
        android:layout_width="152dp"
        android:layout_height="227dp"
        android:src="@drawable/flower"
        app:backgroundTint="#DFF4C7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/frameLayout2"
        app:layout_constraintVertical_bias="0.394"></ImageView>

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.073">


        <ImageView
            android:id="@+id/day_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/day" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"

            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:id="@+id/day_fix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/day_img"
                android:layout_alignTop="@id/day_img"
                android:layout_alignRight="@id/day_img"
                android:layout_alignBottom="@id/day_img"
                android:gravity="center"
                android:text="@string/d_day_format"
                android:textColor="@color/d_day_color"
                android:textSize="32dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/day_img"
                android:layout_alignTop="@id/day_img"
                android:layout_alignRight="@id/day_img"
                android:layout_alignBottom="@id/day_img"
                android:gravity="center"
                android:text="@string/d_day"
                android:textColor="@color/d_day_color"
                android:textSize="32dp"
                android:textStyle="bold" />
        </LinearLayout>

    </FrameLayout>

    <TextView
        android:id="@+id/plantName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Plant_name"
        android:textColor="#000000"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.688" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85">


        <ImageView
            android:id="@+id/health_main"
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:scaleType="fitXY"
            android:src="@drawable/health_box" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"

            android:paddingLeft="30dp"
            android:paddingRight="5dp">

            <TextView
                android:id="@+id/health_format"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/health_main"
                android:layout_alignTop="@id/health_main"
                android:layout_alignRight="@id/health_main"
                android:layout_alignBottom="@id/health_main"
                android:gravity="center"
                android:text="@string/health_format"
                android:textColor="#000000"
                android:textSize="32dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/health"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/health_main"
                android:layout_alignTop="@id/health_main"
                android:layout_alignRight="@id/health_main"
                android:layout_alignBottom="@id/health_main"
                android:gravity="center"
                android:paddingLeft="15dp"
                android:text="@string/health"
                android:textColor="@color/main_health_color"
                android:textSize="32dp"
                android:textStyle="bold" />


            <ImageView
                android:id="@+id/regenerate"
                android:layout_width="wrap_content"
                android:layout_height="41dp"
                android:paddingLeft="30dp"
                android:src="@drawable/autorenew" />

        </LinearLayout>

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>