<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.LoginFragment">
    <!--텍스트: 로그인-->

    <!--텍스트: BeMyPlant!-->

    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/notosans_bold"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="@dimen/textBigSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.121" />

    <TextView
        android:id="@+id/appNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/notosans_bold"
        android:gravity="center"
        android:text="@string/sub_name"
        android:textColor="@color/black"
        android:textSize="@dimen/textMediumSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginText"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/appNameText"
        app:layout_constraintBottom_toTopOf="@+id/startButton">

        <LinearLayout
            android:id="@+id/userId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appNameText"
            app:layout_constraintVertical_bias="0.06">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosans_bold"
                android:labelFor="@+id/id_input"
                android:text="@string/id"
                android:textColor="@color/black"
                android:textSize="@dimen/textSmallSize" />

            <EditText
                android:id="@+id/userIdInput"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/button_white2" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/userPw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userId"
            app:layout_constraintVertical_bias="0.085">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosans_bold"
                android:text="@string/pw"
                android:textColor="@color/black"
                android:textSize="@dimen/textSmallSize" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight = "1">

                <EditText
                    android:id="@+id/userPwInput"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:autofillHints="password"
                    android:inputType="textPassword"
                    android:background="@drawable/button_white2" />

                <android.widget.Button
                    android:id="@+id/visibleButton"
                    android:layout_width="37dp"
                    android:layout_height="30dp"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/visible"
                    android:backgroundTint="@color/charcoal"
                    android:contentDescription="visible" />
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>

    <android.widget.Button
        android:id="@+id/startButton"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button_green"
        android:gravity="center"
        android:text="로그인"
        android:textColor="@color/white"
        android:textSize="@dimen/textButtonSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>

